tests/functional2/lang/attrs/eval-fail-duplicate-inherit.err.exp
error: attribute 'a' already defined at /pwd/in.nix:1:16
       at /pwd/in.nix:1:19:
            1| { inherit ({}) a; a.b = 1; }
             |                   ^
            2|
